--- a/pom.xml
+++ b/pom.xml
@@ -50,10 +50,10 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>2.3.1</version>
-                <configuration>
+                <!--<configuration>
                     <source>1.8</source>
                     <target>1.8</target>
-                </configuration>
+                </configuration>-->
             </plugin>
         </plugins>
     </build>
