--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,7 +5,7 @@
          http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 
     <welcome-file-list>
-        <welcome-file>main.xhtml</welcome-file>
+        <welcome-file>index.xhtml</welcome-file>
     </welcome-file-list>
     <servlet>
         <servlet-name>Faces Servlet</servlet-name>
