--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,12 @@
             <artifactId>jsp-api</artifactId>
             <version>2.1</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.primefaces</groupId>
+            <artifactId>primefaces</artifactId>
+            <version>6.0</version>
+        </dependency>
     </dependencies>
 
     <build>
