--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,12 @@
             <artifactId>primefaces</artifactId>
             <version>6.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>9.1-901-1.jdbc4</version>
+        </dependency>
     </dependencies>
 
     <build>
