--- a/pom.xml
+++ b/pom.xml
@@ -56,16 +56,18 @@
 
     <build>
         <finalName>LabFaces</finalName>
-
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.3.1</version>
-                <!--<configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
-                </configuration>-->
+                <artifactId>maven-war-plugin</artifactId>
+                <version>3.2.2</version>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <addClasspath>true</addClasspath>
+                        </manifest>
+                    </archive>
+                </configuration>
             </plugin>
         </plugins>
     </build>
